Bug 138156 - Border widget does not allow to keep settings
Summary: Border widget does not allow to keep settings
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
Depends on:
Blocks: Toolbar-Border-Controls
  Show dependency treegraph
 
Reported: 2020-11-12 10:11 UTC by Heiko Tietze
Modified: 2020-11-17 10:40 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Before/After screenshot (104.99 KB, image/png)
2020-11-12 10:11 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2020-11-12 10:11:10 UTC
Created attachment 167232 [details]
Before/After screenshot

Follow-up to bug 138078: The border widget can set a line on, off, or not change. This is visualized per actual line, empty area, or grey line. You toggle these three states per single click.

However, while on and off works as expected the keep-what-you-have option switches the line actually off.

Version: 7.1.0.0.alpha1+
Build ID: aaf931335b39cc788a544994fb0712286c4d998e
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Caolán McNamara 2020-11-12 11:05:02 UTC
this seems to be a different issue than bug 138078 and possible broken since 2018
Comment 2 Erick 2020-11-12 20:54:52 UTC Comment hidden (spam)
Comment 3 Commit Notification 2020-11-13 08:42:57 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/88a10c151a373d5ca2b48bf8c18b3a36b6885961

tdf#138156 diagonal borders always set even if in don't care mode

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2020-11-13 08:49:06 UTC
fixed in master, backport to 7-0 in gerrit
Comment 5 Heiko Tietze 2020-11-13 16:19:34 UTC
Thanks, Caolan!
Comment 6 Commit Notification 2020-11-17 10:40:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/b89e61976dbf4d990f8cc74d90d6e73aba98a629

tdf#138156 diagonal borders always set even if in don't care mode

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.