tdf#138156 diagonal borders always set even if in don't care mode

Change-Id: If55ac230c2f591e79a6c90df07870233a46eca5d